Added voting
