# routes/voting.routes.js
@@ -1,0 +1,11 @@
+import express from 'express'
+import { createVote, getVotesByCoupleId, getVotesByCouples } from '../controllers/voting.controller.js';
+const router = express.Router()
+
+router.get("/votes/by-couples",getVotesByCouples)
+
+router.get("/votes/couples/:id", getVotesByCoupleId)
+
+router.post("/vote",createVote)
+
+export default router;
